<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".NewMainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/iv_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/list_first_activity" />

            <com.quotation.quo.quot.CustomTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.quotation.quo.quot.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/display_type"
            android:textColor="@color/cardview_light_background"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/display_list"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/customTextView"
            app:layout_constraintStart_toEndOf="@+id/customTextView"
            app:layout_constraintTop_toTopOf="@+id/customTextView"
            app:srcCompat="@drawable/list_view" />

        <ImageView
            android:id="@+id/display_grid"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/customTextView"
            app:layout_constraintStart_toEndOf="@+id/display_list"
            app:layout_constraintTop_toTopOf="@+id/customTextView"
            app:srcCompat="@drawable/grid_view" />

        <com.quotation.quo.quot.CustomTextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/category_name"
            android:textColor="@color/cardview_light_background"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/customTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close_category"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/category_name"
            app:layout_constraintEnd_toStartOf="@+id/category_name"
            app:layout_constraintTop_toTopOf="@+id/category_name"
            app:srcCompat="@drawable/delete_button" />

        <ProgressBar
            android:id="@+id/load_more_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/load_more_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customTextView" >

        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/load_more_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/rv_list"
            app:layout_constraintStart_toStartOf="@+id/rv_list"
            app:layout_constraintTop_toTopOf="@+id/rv_list" />

        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_menu"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rv_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.quotation.quo.quot.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/connection_error"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.quotation.quo.quot.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/failed_to_get_data"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.quotation.quo.quot.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_connection"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.quotation.quo.quot.CustomTextView
                android:id="@+id/tv_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/try_again"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.quotation.quo.quot.CustomTextView
                android:id="@+id/tv_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:padding="8dp"
                android:text="@string/random"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <com.quotation.quo.quot.CustomTextView
                android:id="@+id/tv_oldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:padding="8dp"
                android:text="@string/oldest"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <com.quotation.quo.quot.CustomTextView
                android:id="@+id/tv_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:padding="8dp"
                android:text="@string/newest"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/main_activity_ad_unit_id"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_menu"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/ll_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_store" />

                <com.quotation.quo.quot.CustomTextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_the_app"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.7"
                android:contentDescription="@string/app_name"
                app:srcCompat="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/ll_other_apps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/external_link" />

                <com.quotation.quo.quot.CustomTextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_grate_apps"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.7"
                android:contentDescription="@string/app_name"
                app:srcCompat="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/ll_categories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/category"
                    android:tint="@color/colorAccent" />

                <com.quotation.quo.quot.CustomTextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rv_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
