<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imageActivityBackground"
    android:orientation="vertical"
    tools:context=".ImageDisplayActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="7dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/imageActivityCardBackground"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/image_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:minHeight="350dp"
                            android:scaleType="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <include
                            android:id="@+id/fabs"
                            layout="@layout/fab_menu"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_image" />

                    </android.support.constraint.ConstraintLayout>

                    <com.quotation.quo.quot.CustomTextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="58dp"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/app_description"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_layout" />

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="4dp"
                        android:src="@drawable/l_arrow"
                        android:tint="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_layout" />

                    <ImageView
                        android:id="@+id/iv_next"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="4dp"
                        android:src="@drawable/r_arrow"
                        android:tint="@color/white"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_layout" />

                </android.support.constraint.ConstraintLayout>
            </ScrollView>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:adUnitId="@string/image_activity_ad_unit_id"
        app:adSize="SMART_BANNER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_main" />

</android.support.constraint.ConstraintLayout>

